# zink

./: CODEOWNERS  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  release.yml
contracts/factors_verifier/: Cargo.toml  lib.rs
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/collectibles/: Cargo.toml
pallets/collectibles/src/: lib.rs
pallets/nicks/: Cargo.toml
pallets/nicks/src/: lib.rs  migration.rs  types.json
pallets/template/src/: lib.rs
pallets/verifier/: Cargo.toml  README.md
pallets/verifier/src/: lib.rs
provers/factors/: README.md  rust-toolchain
provers/factors/host/: Cargo.toml
provers/factors/host/src/: main.rs
provers/factors/methods/: Cargo.toml
provers/factors/methods/guest/: Cargo.toml
provers/factors/methods/guest/src/: main.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  verifier_ext.rs
